# PyStarshade

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  _typos.toml  bluestein_fft.py  pyproject.toml  setup.py
.github/workflows/: draft-pdf.yml  pre-commit.yaml
data/: drm.py  exovista_scene.py  telescope_drm.py
data/masks/: README  grey_mask.py  wfirst_locus.p
docs/: .readthedocs.yaml  conf.py  index.rst  requirements.txt
docs/content/: background.rst  contribute.rst  fft.rst  install.rst  solar_system.ipynb  solar_system_example.rst  test.rst  usage.rst
docs/paper/: paper.bib  paper.md  pystarshade.md
examples/: download_exovista.py  earth_figure.py  earth_sim.py  exovista_sim.py  haystacks_model.py  make_pupil_HCIPY.py  mask_from_locus.py  simple_point_source.py  solar_system.ipynb  star_exo.py  visualize_throughput.py  visualize_throughput_exoEarth.py
examples/starshade_masks/: README  mpi_gen_mask.py
pystarshade/: config.py  propagator.py  simulate_field.py
pystarshade.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pystarshade/apodization/: apodize.py  pupil.py
pystarshade/data/: .gitattributes  drm.py
pystarshade/diffraction/: __init__.py  bluestein_fft.py  bluestein_fft_gpu.py  diffract.py  field.py  util.py
starshade/: example_star_exo.py  simulate_field.py
starshade/apodization/: apodization.py  sample.py
starshade/diffraction/: bluestein_fft.py  bluestein_util.py  diffract.py  field.py  util.py
tests/: test_bluestein_fft.py  test_bluestein_fft_gpu.py  test_chunk_fft.py  test_circle.py  test_hoee_integration.py
(+41 files in other folders)
